fix: remove horizontal overflow and hide x-axis scroll

--- a/Style/global.css
+++ b/Style/global.css
@@ -58,6 +58,7 @@ html {
 
 body {
   background-color: var(--bg-color);
+  overflow-x: hidden;
 }
 
 h1,
